--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,18 @@
         <jelastic.environment>wakaleo</jelastic.environment>
     </properties>
 
+    <project ...>
+  ...
+  <distributionManagement>
+    <repository>
+      <id>github</id>
+      <name>GitHub Packages</name>
+      <url>https://maven.pkg.github.com/pawanpuppala/game-of-life
+</url>
+    </repository>
+  </distributionManagement>
+</project>
+
     <scm>
         <connection>scm:git:git@github.com:${github.account}/game-of-life.git</connection>
         <developerConnection>scm:git:git@github.com:${github.account}/game-of-life.git</developerConnection>
