--- a/pom.xml
+++ b/pom.xml
@@ -25,11 +25,9 @@
     <repository>
       <id>github</id>
       <name>GitHub Packages</name>
-      <url>https://maven.pkg.github.com/pawanpuppala/game-of-life
-</url>
+      <url>https://maven.pkg.github.com/octocat/hello-world</url>
     </repository>
   </distributionManagement>
-</project>
 
     <scm>
         <connection>scm:git:git@github.com:${github.account}/game-of-life.git</connection>
