--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -19,7 +19,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn --batch-mode deploy
+      run: mvn clean install package deploy
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
      
